Complete the revision of netCDF tests: fix an issue in the check for CRS axis units of measurement.